[tool.poetry]
name = "dynalang"
version = "0.1.0"
description = "Code for paper 'Learning to Model the World with Language.'"
authors = ["Jessy Lin <jessy81697@gmail.com>"]
readme = "README.md"
keywords = ["environment", "agent", "rl", "language"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
"ruamel.yaml" = "*"
gym = { version = "0.26" }
jax = { version = "0.4.*" }
jaxlib = { version = "0.4.*" }
optax = "*"
optree = "*"
tensorflow_probability = "*"
tensorflow_cpu = "*"
psutil = "*"
rich = "*"
matplotlib = "*"
zmq = "*"
datasets = "*"
transformers = "*"
torch = { version = "*", optional = true }
wandb = { version = "*", optional = true }

[tool.poetry.extras]
# For pre-embedding new sentences
dev = ["torch"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
